Updated SortedLinkedList implementation to make it library-independent.
Now the Comparable interface is used instead of getting the id of the
Data.
Library-dependent code is moved to SortedDataList.